components/Moodboard/Moodboard.css
.moodboard-container {
  background-color: #2e2e36 !important;
  border-radius: 20px !important;
  border: 4px solid #adb5bd !important;
  box-shadow: 0 0 30px rgba(100, 100, 100, 0.3) !important;
}

.moodboard-container-violet {
  border-color: #9775fa !important;
  box-shadow: 0 0 30px rgba(151, 117, 250, 0.5) !important;
}

.moodboard-container-cyan {
  border-color: #3bc9db !important;
  box-shadow: 0 0 30px rgba(59, 201, 219, 0.5) !important;
}

.moodboard-container-pink {
  border-color: #f06595 !important;
  box-shadow: 0 0 30px rgba(240, 101, 149, 0.5) !important;
}

.moodboard-container-gray {
  border-color: #adb5bd !important;
  box-shadow: 0 0 30px rgba(173, 181, 189, 0.3) !important;
}

